# moldy

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.agents/skills/checkpoint/: SKILL.md
.agents/skills/ci-triage/: SKILL.md
.agents/skills/dependency-review/: SKILL.md
.agents/skills/document-release/: SKILL.md
.agents/skills/health/: SKILL.md
.agents/skills/investigate/: SKILL.md
.agents/skills/plan-eng-review/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/spec/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/: README.md
apps/smoke/: main.cpp
config/: toolchain.psd1
docs/: AI_TOOLING.md  AI_WORKFLOW.md  ARCHITECTURE.md  CODE_QUALITY.md  CORE_DIAGNOSTICS.md  CPP_STYLE.md  DECISIONS.md  GITHUB_WORKFLOW.md  MATH_CONVENTIONS.md  MCP_ADMISSION.md  PROJECT_BRIEF.md  ROADMAP.md  SOURCE_MAP.md  TESTING.md
scripts/: README.md  bench.ps1  build.ps1  check-changed.ps1  check.ps1  collect-diagnostics.ps1  configure.ps1  context.ps1  doctor.ps1  format.ps1  install-tools.ps1  lint.ps1  test-agent-skills.ps1  test-ai-workflow.ps1  test-toolchain-policy.ps1  test.ps1  toolchain-policy.ps1  workflow-common.ps1
src/core/: README.md  build_info.cpp  build_info.hpp  core.cppm  lifecycle.cpp  logging.cpp  status.cpp  time.cpp
src/math/: README.md  math.cppm
tasks/: backlog.md  current.md
tests/: README.md
tests/core/: test_main.cpp
tests/math/: test_main.cpp
tests/math_policy/: test_main.cpp
(+1 files in other folders)
